Date	Added
12/22
        * Fixed reading itemslottable.txt causing cards to become unuseable [celest]
        * Added error message if file renaming in lock_fclose fails [celest]
        * Fixed frost diver not working ... my bad =p [celest]
        * Corrected typo in clif_hpmeter - md -> sd [celest]
        * Check if the player has been authentified by the char server before
          clearing any timers in map_quit [celest]
        * Added eventtimercount and timerskill_count - check these before clearing
          or deleting timers [celest]
        * Added sc_count check in skill_stop_dancing [celest]
        * Translated the japanese part in battle_athena.conf [celest]
        * Added ignore the new skill delays when chaining monk combos [celest]

12/21
	* Added #zeny, removed @charzeny [MC Cameri]
	* Since conf/maps_list.txt was removed, added conf/maps_athena.conf [Ajarn]
	* Fixed a few NPCs that were giving curly errors. It seems to be caused by a bug that the NPCs' last line isn't read or something [Codemaster]
	* Fixed a tiny compile warning in npc.c [Codemaster]
	* Allowed the NPCs without proper curly brackets to still load, but give an error still [Codemaster]
	* Added variable 'current_file' which tells the filename of the script while loading npcs [MC Cameri]
	  -the variable its set in do_init_npc() or something like that, so you can only access it
	   after the use of do_init_npc().
	* Fixed the display of a warning saying that a right curly brace was missing [MC Cameri]
	* Removed @charwarp and @rura+ and added #warp, #rura, #rura+ [MC Cameri]
	* Removed conf/npcs_list.txt, and placed it in npc/npcs_athena.conf [MC Cameri]
        * Moved some code in pc_break_equip that was causing compile errors [celest]
	* guild skills vanished due to incorrect placement of a 
	  check for quest skills in the calc_skilltree code [MouseJstr]
	* Fixed skill LK_HEADCRUSH, LK_JOINTBEAT to work on both on 
	  and off peco's for lord knights (fixed typo in