@@ -1,5 +1,7 @@
 Date	Added
 12/22
+	* Added conditional SHOW_DEBUG_MSG for displaying ShowDebug()'s output, it was missing before [MC Cameri]
+	* Added #zeny, removed @charzeny [MC Cameri]
         * Fixed reading itemslottable.txt causing cards to become unuseable [celest]
         * Added error message if file renaming in lock_fclose fails [celest]
         * Fixed frost diver not working ... my bad =p [celest]
@@ -13,7 +15,6 @@ Date	Added
         * Added ignore the new skill delays when chaining monk combos [celest]
 
 12/21
-	* Added #zeny, removed @charzeny [MC Cameri]
 	* Since conf/maps_list.txt was removed, added conf/maps_athena.conf [Ajarn]
 	* Fixed a few NPCs that were giving curly errors. It seems to be caused by a bug that the NPCs' last line isn't read or something [Codemaster]
 	* Fixed a tiny compile warning in npc.c [Codemaster]
